# ghost-prototype

./: .gitignore  README.md  pyproject.toml
docs/: README.md  architecture.md  example_flow.md  state_model.md
ghost/: agents.py  input.py  policies.py  relationships.py  temperament.py  world.py
ghost-engine/: CHANGELOG.md  README.md  pyproject.toml
ghost-engine/cascade_experiments/: compare_runs.py  config.py  control_model.py  ghost_model.py
ghost-engine/docs/: testing.md
ghost-engine/docs/tests/: bench_runtime_stress.py
ghost-engine/examples/: relationship_proof_demo.py
ghost-engine/ghost/: __init__.py  agents.py  api.py  engine.py  events.py  governance.py  ids.py  input.py  llm_adapter.py  policies.py  relationships.py  step.py  temperament.py  threat_response.py  validation.py  world.py
ghost-engine/ghost/examples/: ghost-math-demo.py  ghost_math_helper.py  npc_relationship_demo.py  relationship_diagnostics_demo.py  relationship_proof_demo.py  shopkeeper_mini_game.py  simple_npc_demo.py  threat_response_demo.py
ghost-engine/tests/: test_agent_registry.py  test_api_demo.py  test_api_governance_v110.py  test_api_id_boundary_v171.py  test_api_temperament_v170.py  test_betrayal_stability_breach_v173.py  test_engine_v1_contracts.py  test_external_input.py  test_governance_core.py  test_governance_intents.py  test_governance_threat_context_v174.py  test_internal_step_does_not_leak_type.py  test_ironclad_boundaries_v170.py  test_ironclad_public_numbers_v170.py  test_llm_adapter_v110.py  test_mathematical_invariants_v170.py  test_npc_actor_memory.py  test_oscillation_demo.py  test_plot_png.py  test_policies_v110.py  test_positive_reservoir_cap_v173.py  test_proof_demo.py  test_public_packet_schemas_v170.py  test_public_social_propagation_bridge.py  test_relationship_diagnostics.py  test_relationship_interaction.py  test_relationship_transitions_v110.py  test_release_contract_v171.py  test_scale_safety_v170.py  test_shock_bundle_v173.py  test_snapshot_metadata_v170.py  test_temperament_demo_v170.py  test_temperament_persistent_distrust_v172.py  test_threat_response_v180.py  test_tick_packet_v160.py  test_transitions.py
ghost-engine/tests/integration/: test_runtime_loop.py
ghost-engine/tests/package/: test_import_no_side_effects.py
ghost-engine/tests/performance/: test_ips_floor.py
ghost-engine/tests/property/: test_actor_memory_exact.py  test_decay_monotonic.py  test_emotional_gain_deterministic.py  test_fuzz_determinism.py  test_relationship_accumulation.py
ghost-engine/tests/regression/: test_actor_threat_memory.py  test_regressions_core.py  test_snapshot_json_safe.py
ghost/examples/: ghost_math_helper.py  npc_demo.py  relationship_diagnostics_demo.py  shopkeeper_mini_game.py  social_propagation_demo.py  temperament_demo.py
tests/: test_api_docs_v171.py  test_api_governance_v110.py  test_api_state_snapshot_v171.py  test_api_tick_packet_v170.py  test_engine_v1_contracts.py  test_environment_isolation.py  test_events_v170.py  test_explicit_run_control.py  test_governance_core.py  test_governance_intents.py  test_id_validation_v170.py  test_ironclad_boundaries_v170.py  test_llm_adapter_v110.py  test_npc_emotional_modulation.py  test_npc_intent_decay.py  test_npc_intent_processing.py  test_oscillation_graph.py  test_public_api.py  test_relationship_graph.py  test_relationship_maturity_volatility.py  test_relationship_transitions_v110.py  test_scale_safety_v170.py  test_simple_demo.py  test_social_propagation_v160.py  test_temperament_v170.py  test_test_suite_quality_v170.py
tests/legacy_demos/: engine_v1_tests.py  milestone_test.py
tests/package/: test_clean_instantiation.py
(+6 files in other folders)
