[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ghocentric-ghost-engine"
version = "1.0.1"
description = "Ghost cognitive engine"
readme = "README.md"
requires-python = ">=3.9"

authors = [
  { name = "Shane Heckathorn" }
]

dependencies = []

license = { text = "MIT" }
keywords = ["ai", "engine", "cognition", "simulation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["ghost", "ghost.*"]

[project.scripts]
ghost-demo = "ghost.examples.relationship_proof_demo:main"
ghost-npc-demo = "ghost.examples.simple_npc_demo:main"
