[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ghocentric-ghost-engine"
version = "1.1.0"
description = "A deterministic emotional inertia runtime for NPC systems and persistent interactive state."
readme = "README.md"
requires-python = ">=3.9"

authors = [
  { name = "Shane Heckathorn" }
]

dependencies = []

license = { text = "MIT" }
keywords = [
  "ai",
  "engine",
  "cognition",
  "simulation",
  "npc",
  "game-ai",
  "emotional-inertia",
  "state-engine"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Games/Entertainment",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["ghost", "ghost.*"]

[project.scripts]
ghost-demo = "ghost.examples.relationship_proof_demo:main"
ghost-npc-demo = "ghost.examples.simple_npc_demo:main"
