[build-system]
requires = ["setuptools>=61,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghocentric-ghost-engine"
version = "1.7.2"
description = "A deterministic state engine for NPC systems and persistent interactive state."
readme = "README.md"
requires-python = ">=3.9"

authors = [
  { name = "Shane Heckathorn" }
]

dependencies = []

license = { text = "MIT" }

keywords = [
  "ai",
  "engine",
  "cognition",
  "simulation",
  "npc",
  "game-ai",
  "emotional-inertia",
  "state-engine",
  "relationships",
  "social-propagation",
  "temperament"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Games/Entertainment",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["ghost", "ghost.*"]

[project.scripts]
ghost-demo = "ghost.examples.relationship_proof_demo:main"
ghost-npc-demo = "ghost.examples.simple_npc_demo:main"
ghost-shopkeeper-demo = "ghost.examples.shopkeeper_mini_game:main"
ghost-math-demo = "ghost.examples.ghost_math_helper:main"
ghost-diagnostics-demo = "ghost.examples.relationship_diagnostics_demo:main"
ghost-social-demo = "ghost.examples.social_propagation_demo:main"
ghost-temperament-demo = "ghost.examples.temperament_demo:main"
